src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14 Days</fullName>
                    <default>true</default>
                    <label>14 Days</label>
                </value>
                <value>
                    <fullName>7 Days</fullName>
                </value>
                <value>
                    <fullName>28 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>75 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payroll_City__c</fullName>
        <label>Payroll City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Country__c</fullName>
        <label>Payroll Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_County__c</fullName>
        <label>Payroll County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Postcode__c</fullName>
        <label>Payroll Postcode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Payroll Primary Contact)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payroll_Primary_Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Primary Hiring Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Payroll Primary Hiring Manager)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payroll_Street__c</fullName>
        <label>Payroll Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <formula>ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Rewards_Scheme__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Client loyalty sign up scheme</description>
        <label>Premium Rewards Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REED_Global_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>REED Global School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Area__c</fullName>
        <label>Regional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bedfordshire</fullName>
                </value>
                <value>
                    <fullName>Berkshire</fullName>
                </value>
                <value>
                    <fullName>Bristol/Bath</fullName>
                </value>
                <value>
                    <fullName>Buckinghamshire</fullName>
                </value>
                <value>
                    <fullName>Cambridgeshire</fullName>
                </value>
                <value>
                    <fullName>Cheshire</fullName>
                </value>
                <value>
                    <fullName>Cornwall</fullName>
                </value>
                <value>
                    <fullName>Cumbria</fullName>
                </value>
                <value>
                    <fullName>Derbyshire</fullName>
                </value>
                <value>
                    <fullName>Devon</fullName>
                </value>
                <value>
                    <fullName>Dorset</fullName>
                </value>
                <value>
                    <fullName>Durham</fullName>
                </value>
                <value>
                    <fullName>East Anglia</fullName>
                </value>
                <value>
                    <fullName>Eastern Scotland</fullName>
                </value>
                <value>
                    <fullName>East Sussex</fullName>
                </value>
                <value>
                    <fullName>East Wales</fullName>
                </value>
                <value>
                    <fullName>East Yorkshire</fullName>
                </value>
                <value>
                    <fullName>Essex</fullName>
                </value>
                <value>
                    <fullName>Gloucestershire</fullName>
                </value>
                <value>
                    <fullName>Greater Manchester</fullName>
                </value>
                <value>
                    <fullName>Hampshire</fullName>
                </value>
                <value>
                    <fullName>Herefordshire</fullName>
                </value>
                <value>
                    <fullName>Hertfordshire</fullName>
                </value>
                <value>
                    <fullName>Highlands</fullName>
                </value>
                <value>
                    <fullName>Islands</fullName>
                </value>
                <value>
                    <fullName>Isle of Wight</fullName>
                </value>
                <value>
                    <fullName>Isles of Scilly</fullName>
                </value>
                <value>
                    <fullName>Kent</fullName>
                </value>
                <value>
                    <fullName>Lancashire</fullName>
                </value>
                <value>
                    <fullName>Leicestershire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_Postal_Code__c</fullName>
        <label>Registered Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Street_Address2__c</fullName>
        <label>Registered Street Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Street_Address__c</fullName>
        <label>Registered Street Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report To</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>There are no contacts against this Client.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rick_Axon_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the school a client of Rick Axon?</description>
        <label>Rick Axon Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEN_Specialism__c</fullName>
        <label>SEN Specialism</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASD</fullName>
                </value>
                <value>
                    <fullName>EBD</fullName>
                </value>
                <value>
                    <fullName>MLD</fullName>
                </value>
                <value>
                    <fullName>SLD</fullName>
                </value>
                <value>
                    <fullName>SEMH</fullName>
                </value>
                <value>
                    <fullName>Severe &amp; Complex Learning Needs</fullName>
                </value>
                <value>
                    <fullName>PMLD</fullName>
                </value>
                <value>
                    <fullName>PRU</fullName>
                </value>
                <value>
                    <fullName>SEN - HI</fullName>
                </value>
                <value>
                    <fullName>SEN - VI</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>2-19 yrs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Ledger_Number__c</fullName>
        <label>Sales Ledger Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>School_Alias__c</fullName>
        <inlineHelpText>School Short Name - Display on the Scheduler (10 Character Length Max)</inlineHelpText>
        <label>School Alias</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Category__c</fullName>
        <label>School Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academy Trust/Free School</fullName>
                </value>
                <value>
                    <fullName>Independent/Private</fullName>
                </value>
                <value>
                    <fullName>Maintained</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Group__c</fullName>
        <label>School Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academy</fullName>
                </value>
                <value>
                    <fullName>Cluster</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Federation</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Specialism__c</fullName>
        <label>School Specialism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Business &amp; Enterprise</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Humanities</fullName>
                </value>
                <value>
                    <fullName>Languages</fullName>
                </value>
                <value>
                    <fullName>Mathematics &amp; Computing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Performing Arts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <label>School Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Children&apos;s Centre</fullName>
                </value>
                <value>
                    <fullName>College (6th)</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Further Ed.</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>HMP Prison</fullName>
                </value>
                <value>
                    <fullName>Infant</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Nursery</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Primary, Middle</fullName>
                </value>
                <value>
                    <fullName>Private Nursery</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Special Needs</fullName>
                </value>
                <value>
                    <fullName>Tech College</fullName>
                </value>
                <value>
                    <fullName>Through School</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Virtual School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Term_End__c</fullName>
        <label>Second Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Term_Start__c</fullName>
        <label>Second Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_Account_GeoLocation__c</fullName>
        <label>Set Account GeoLocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Charge_Rate__c</fullName>
        <label>Standard Charge Rate (Old)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Half_Day_Rate__c</fullName>
        <label>Standard Half Day Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Hourly_Rate__c</fullName>
        <label>Standard Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_LEA__c</fullName>
        <label>LEA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LEA__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Anglesey</fullName>
                </value>
                <value>
                    <fullName>Barking</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Barnsley</fullName>
                </value>
                <value>
                    <fullName>Bath and North East Somerset</fullName>
                </value>
                <value>
                    <fullName>Bedfordshire</fullName>
                </value>
                <value>
                    <fullName>Belfast</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Blackburn and Darwen</fullName>
                </value>
                <value>
                    <fullName>Blackpool</fullName>
                </value>
                <value>
                    <fullName>Blaenau Gwent</fullName>
                </value>
                <value>
                    <fullName>Bolton</fullName>
                </value>
                <value>
                    <fullName>Bournemouth</fullName>
                </value>
                <value>
                    <fullName>Bracknell Forest</fullName>
                </value>
                <value>
                    <fullName>Bradford</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bridgend</fullName>
                </value>
                <value>
                    <fullName>Brighton and Hove</fullName>
                </value>
                <value>
                    <fullName>British Columbia</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Buckinghamshire</fullName>
                </value>
                <value>
                    <fullName>Bury</fullName>
                </value>
                <value>
                    <fullName>Caerphilly</fullName>
                </value>
                <value>
                    <fullName>Calderdale</fullName>
                </value>
                <value>
                    <fullName>Cambridgeshire</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>Canada Other</fullName>
                </value>
                <value>
                    <fullName>Cardiff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Regional_Area__c</fullName>
        <label>Sub Regional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington and Chelsea</fullName>
                </value>
                <value>
                    <fullName>Kingston upon Thames</fullName>
                </value>
                <value>
                    <fullName>Lambeth</fullName>
                </value>
                <value>
                    <fullName>Lewisham</fullName>
                </value>
                <value>
                    <fullName>Merton</fullName>
                </value>
                <value>
                    <fullName>Newham</fullName>
                </value>
                <value>
                    <fullName>Redbridge</fullName>
                </value>
                <value>
                    <fullName>Richmond upon Thames</fullName>
                </value>
                <value>
                    <fullName>Southwark</fullName>
                </value>
                <value>
                    <fullName>Sutton</fullName>
                </value>
                <value>
                    <fullName>Tower Hamlets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TOB_Sent_Date__c</fullName>
        <label>TOB Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Agreed_D2D_Charge_Rate__c</fullName>
        <label>Standard Day Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__External_Job_ID__c</fullName>
        <description>Job Id to be populated here for dummy Accounts used for location.</description>
        <externalId>true</externalId>
        <label>External Job ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Invoice_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__LEA__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>Yorkshire &amp; Humberside</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>West Midlands</fullName>
                </value>
                <value>
                    <fullName>East Midlands</fullName>
                </value>
                <value>
                    <fullName>Eastern England</fullName>
                </value>
                <value>
                    <fullName>Greater London</fullName>
                </value>
                <value>
                    <fullName>South East England</fullName>
                </value>
                <value>
                    <fullName>South West England</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__isDummy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used by the scheduler to indicate the dummy account created to fetch the latitude and longitude if this is checked consider it would be deleted.</description>
        <label>isDummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Method__c</fullName>
        <defaultValue>&quot;Ltd Co/Umbrella&quot;</defaultValue>
        <label>Tax Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Agreed__c</fullName>
        <label>Terms Agreed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Sent - Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Term_End__c</fullName>
        <label>Third Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Term_Start__c</fullName>
        <label>Third Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timesheet_Delivery_Method__c</fullName>
        <label>Timesheet Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_Status__c</fullName>
        <label>VAT Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isFirstVacancyCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default false, this field is set to True when the first Vacancy is created for a Construction Company</description>
        <inlineHelpText>By default false, this field is set to True when the first Vacancy is created for a Construction Company</inlineHelpText>
        <label>Is First Vacancy Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__SMS_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AC_South_Bucks_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>AC - South Bucks Active</label>
    </listViews>
    <listViews>
        <fullName>Alex_s_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>School_Type__c</columns>
        <columns>Sub_LEA__c</columns>
        <columns>Post_Code__c</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>Target_School__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Manchester</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>askin</value>
        </filters>
        <label>Alex&apos;s Using Clients</label>
        <sharedTo>
            <group>Manchester_branch</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alicja_Bucks_Sec_Clients</fullName>
        <columns>Client_Status__c</columns>
        <columns>School_Type__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>Post_Code__c</columns>
        <columns>Alert__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS2_ZIP</field>
            <operation>startsWith</operation>
            <value>HP14,HP13,HP12,HP11,HP10,HP9,HP8,HP7,SL0,SL1,SL4,SL2,SL7,SL8,SL9,UB9,RG17,RG20,RG18,RG7,RG8,RG9,RG10,RG42,RG12,RG30,RG31,RG2,RG6,RG5,RG41,RG40</value>
        </filters>
        <filters>
            <field>School_Type__c</field>
            <operation>equals</operation>
            <value>Secondary</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>contains</operation>
            <value>Watford</value>
        </filters>
        <label>Alicja - Bucks Sec Clients</label>
        <sharedTo>
            <group>Watford_branch</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Brighton_Primary_Excl_London</fullName>
        <columns>Client_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>School_Type__c</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>contains</operation>
            <value>Brighton Primary</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Newland</value>
        </filters>
        <filters>
            <field>LEA__c</field>
            <operation>notContain</operation>
            <value>Greater London</value>
        </filters>
        <filters>
            <field>Sub_LEA__c</field>
            <operation>notContain</operation>
            <value>Surrey</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_STATE</field>
            <operation>notContain</operation>
            <value>Surrey</value>
        </filters>
        <label>All Brighton Primary (Sussex)</label>
        <sharedTo>
            <role>Brighton_Primary_Branch_Manager</role>
            <role>Brighton_Primary_Consultant</role>
            <role>Brighton_Secondary_Branch_Manager</role>
            <role>Brighton_Secondary_Consultant</role>
        </sharedTo>
    </listViews>
</CustomObject>